tests/reference/asr-derived_type_03-a9e3c15.stderr
semantic error: Passed object dummy argument does not match function argument
 --> tests/errors/derived_type_03.f90:7:9
  |
7 |         procedure(testing_interface), deferred  :: testing
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
